# Readable

./: .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  DEVELOPMENT.md  INSTALL.md  README.md  com.readable.tts.plist  inspect_cache.sh  launch_app_test.sh  pyproject.toml  test_app_with_document.sh  test_full_workflow.sh  test_with_logging.sh  view_logs.sh
readable/: __init__.py  app.py  app_optimized.py  audio_player.py  cache.py  chunker.py  config.py  exceptions.py  history.py  local_tts_client.py  logger.py  parallel_tts.py  protocols.py  sf_symbols.py  text_cleaner.py  tts_client.py  validator.py
scripts/: benchmark_full_document.py  benchmark_optimizations.py  performance_profile.py  quick_test.py  verify_audio.py
tests/: __init__.py  conftest.py
tests/fixtures/: sample_text.md
tests/integration/: __init__.py  test_integration.py  test_pause_resume.py  test_workflow.py
tests/unit/: __init__.py  test_chunking.py  test_components.py  test_config_validator_history.py  test_local_tts.py  test_refactoring.py  test_text_cleaner.py
